--- a/app/build.gradle
+++ b/app/build.gradle
@@ -47,4 +47,6 @@ dependencies {
     implementation 'com.intuit.ssp:ssp-android:1.0.6'
 
     implementation 'com.aurelhubert:ahbottomnavigation:2.3.4'
+
+    implementation 'com.google.code.gson:gson:2.8.6'
 }
