--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,8 +9,14 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AgFarm">
-        <activity android:name=".view.activity.DashboardActivity"
+        <activity android:name=".view.activity.CalculateActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar"/>
+        <activity
+            android:name=".view.activity.CropActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
+        <activity
+            android:name=".view.activity.DashboardActivity"
+            android:theme="@style/Theme.Design.Light.NoActionBar" />
         <activity
             android:name=".view.activity.LoginActivity"
             android:theme="@style/Theme.Design.Light.NoActionBar">
